# solmint

./: Anchor.toml  README.md  package-lock.json  package.json
app/: .env.devnet  .env.mainnet  README.md  package-lock.json  package.json  tailwind.config.js  vue.config.js
app/public/: index.html
app/src/: App.vue  main.css  main.js  routes.js
app/src/api/: index.js  mintNft.js  uploadMetadata.js  verifyCollection.js
app/src/components/: MetadataFileForm.vue  PageHome.vue  PageNotFound.vue  PageSuccess.vue  TheFooter.vue  TheForm.vue  TheHeader.vue  TheTooltip.vue
app/src/composables/: useWorkspace.js
app/src/idl/: solmint.json
programs/solmint/: Cargo.toml
programs/solmint/src/: lib.rs
tests/: solmint.ts
