[package]
name = "solmint"
version = "0.1.0"
description = "Mint Solana NFTs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solmint"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = {version = "0.25.0"}
mpl-token-metadata = { version="1.4.0", features = [ "no-entrypoint" ] }
bytemuck = "1.12.1"
